--- a/themes/custom-blist/layouts/partials/homepage/team.html
+++ b/themes/custom-blist/layouts/partials/homepage/team.html
@@ -1,6 +1,6 @@
 <section id="team">
   <div
-    class="container px-6 py-12 mx-auto max-w-4xl flex flex-col gap-8 items-center justify-center"
+    class="container px-6 py-12 mx-auto max-w-4xl flex flex-col gap-8 items-center justify-center prose"
   >
     <div class="flex flex-col items-center">
       <div class="text-4xl font-extrabold mb-3">{{ i18n "homeTeamTitle" }}</div>
