feat: add share links and tags in simple post page

--- a/themes/custom-blist/assets/css/site.css
+++ b/themes/custom-blist/assets/css/site.css
@@ -3,6 +3,10 @@ body {
   font-family: "Inter", sans-serif;
 }
 
+.prose a.no-underline {
+  text-decoration: none;
+}
+
 /* Fonts */
 
 /* inter-300 - latin */
