chore: move margin out of partial section-title

--- a/themes/custom-blist/layouts/partials/components/section-title.html
+++ b/themes/custom-blist/layouts/partials/components/section-title.html
@@ -1,4 +1,4 @@
-<div class="grid grid-cols-12 section-title {{ .margin }}">
+<div class="grid grid-cols-12 section-title">
     <div class="col-span-2 flex flex-row items-center justify-end">
         <a class="
         section-link-icon
