--- a/themes/custom-blist/layouts/partials/homepage/social.html
+++ b/themes/custom-blist/layouts/partials/homepage/social.html
@@ -17,9 +17,8 @@
       (dict
       "title" (i18n "homeSocialTitle")
       "anchor" "socials"
-      "margin" "mb-2"
       "fontSize" "text-2xl" ) }}
-      <p class="opacity-60">{{ i18n "homeSocialDescription" }}</p>
+      <p class="opacity-60 mt-2">{{ i18n "homeSocialDescription" }}</p>
     </div>
 
     <div class="max-w-md flex flex-row flex-wrap gap-3 justify-center">
