--- a/themes/custom-blist/layouts/partials/homepage/support.html
+++ b/themes/custom-blist/layouts/partials/homepage/support.html
@@ -16,9 +16,8 @@
       (dict
       "title" (i18n "homeSupportTitle")
       "anchor" "supports"
-      "margin" "mb-3"
       "fontSize" "text-4xl" ) }}
-      <div class="rounded bg-black-900 dark:bg-white h-2 w-16"></div>
+      <div class="rounded bg-black-900 dark:bg-white h-2 w-16 mt-3"></div>
     </div>
     <div class="text-lg text-normal text-center mb-3 max-w-xl">
       {{ i18n "homeSupportDescription" }}
