--- a/themes/custom-blist/layouts/partials/homepage/events.html
+++ b/themes/custom-blist/layouts/partials/homepage/events.html
@@ -5,9 +5,8 @@
       (dict
       "title" (i18n "homeEventsTitle")
       "anchor" "events"
-      "margin" "mb-3"
       "fontSize" "text-4xl" ) }}
-      <div class="rounded bg-black-900 dark:bg-white h-2 w-16"></div>
+      <div class="rounded bg-black-900 dark:bg-white h-2 w-16 mt-3"></div>
     </div>
     <div class="text-lg text-normal text-center mb-3 max-w-4xl">
       {{ i18n "homeEventsDescription" }}
