--- a/themes/custom-blist/layouts/partials/homepage/posts.html
+++ b/themes/custom-blist/layouts/partials/homepage/posts.html
@@ -17,9 +17,8 @@
       (dict
       "title" (i18n "homePostsTitle")
       "anchor" "posts"
-      "margin" "mb-3"
       "fontSize" "text-4xl" ) }}
-      <div class="rounded bg-black-900 dark:bg-white h-2 w-16 mb-2"></div>
+      <div class="rounded bg-black-900 dark:bg-white h-2 w-16 mb-2 mt-3"></div>
     </div>
     <div class="flex flex-row flex-wrap gap-11 justify-center"></div>
   </div>
