--- a/themes/custom-blist/assets/css/site.css
+++ b/themes/custom-blist/assets/css/site.css
@@ -54,6 +54,11 @@ body {
       format("svg"); /* Legacy iOS */
 }
 
+/* Utilities */
+.underline-links a {
+  @apply underline
+}
+
 /* Components */
 .social-card {
   @apply flex flex-col items-center bg-white py-4 rounded-lg shadow-md gap-1 w-24 dark:bg-black-700 transition duration-500 ease-in-out transform hover:-translate-y-1 hover:scale-110;
