--- a/themes/custom-blist/layouts/partials/homepage/team.html
+++ b/themes/custom-blist/layouts/partials/homepage/team.html
@@ -1,12 +1,12 @@
 <section id="team">
   <div
-    class="container px-6 py-12 mx-auto max-w-4xl flex flex-col gap-8 items-center justify-center prose"
+    class="container px-6 py-12 mx-auto max-w-4xl flex flex-col gap-8 items-center justify-center"
   >
     <div class="flex flex-col items-center">
       <div class="text-4xl font-extrabold mb-3">{{ i18n "homeTeamTitle" }}</div>
       <div class="rounded bg-black-900 dark:bg-white h-2 w-16"></div>
     </div>
-    <div class="text-lg text-normal text-center mb-3">
+    <div class="text-lg text-normal text-center mb-3 underline-links">
       {{ i18n "homeTeamDescription" | safeHTML}}
     </div>
     <div class="flex flex-row flex-wrap gap-11 justify-center">
