fix: smooth scroll to top on safari

--- a/themes/custom-blist/layouts/partials/footer.html
+++ b/themes/custom-blist/layouts/partials/footer.html
@@ -33,4 +33,8 @@
       <path d="M18 15l-6 -6l-6 6h12" />
     </svg>
   </span>
+  <script
+    defer
+    src="https://unpkg.com/smoothscroll-polyfill@0.4.4/dist/smoothscroll.min.js"
+  ></script>
 </footer>
