feat: update section-title partial for more consistency + fix social section header

--- a/themes/custom-blist/layouts/partials/components/section-title.html
+++ b/themes/custom-blist/layouts/partials/components/section-title.html
@@ -1,8 +1,9 @@
-<div class="grid grid-cols-12 section-title">
+<div class="grid grid-cols-12 section-title group">
     <div class="col-span-2 flex flex-row items-center justify-end">
         <a class="
+        opacity-0
+        group-hover:opacity-100
         section-link-icon
-        invisible
         font-normal
         text-xl
         mr-2 
@@ -24,7 +25,7 @@
         </a>
     </div>
 
-    <div class="col-span-8 font-extrabold flex items-center justify-center {{ .fontSize }}">
+    <div class="col-span-8 font-extrabold flex items-center justify-center text-4xl">
         {{ .title }}
     </div>
 </div>
