--- a/themes/custom-blist/layouts/partials/homepage/events.html
+++ b/themes/custom-blist/layouts/partials/homepage/events.html
@@ -4,8 +4,7 @@
       {{ partial "components/section-title"
       (dict
       "title" (i18n "homeEventsTitle")
-      "anchor" "events"
-      "fontSize" "text-4xl" ) }}
+      "anchor" "events" ) }}
       <div class="rounded bg-black-900 dark:bg-white h-2 w-16 mt-3"></div>
     </div>
     <div class="text-lg text-normal text-center mb-3 max-w-4xl">
