--- a/themes/custom-blist/layouts/partials/homepage/posts.html
+++ b/themes/custom-blist/layouts/partials/homepage/posts.html
@@ -16,8 +16,7 @@
       {{ partial "components/section-title"
       (dict
       "title" (i18n "homePostsTitle")
-      "anchor" "posts"
-      "fontSize" "text-4xl" ) }}
+      "anchor" "posts" ) }}
       <div class="rounded bg-black-900 dark:bg-white h-2 w-16 mb-2 mt-3"></div>
     </div>
     <div class="flex flex-row flex-wrap gap-11 justify-center"></div>
