--- a/themes/custom-blist/layouts/partials/homepage/support.html
+++ b/themes/custom-blist/layouts/partials/homepage/support.html
@@ -15,8 +15,7 @@
       {{ partial "components/section-title"
       (dict
       "title" (i18n "homeSupportTitle")
-      "anchor" "supports"
-      "fontSize" "text-4xl" ) }}
+      "anchor" "supports" ) }}
       <div class="rounded bg-black-900 dark:bg-white h-2 w-16 mt-3"></div>
     </div>
     <div class="text-lg text-normal text-center mb-3 max-w-xl">
