--- a/themes/custom-blist/layouts/partials/homepage/team.html
+++ b/themes/custom-blist/layouts/partials/homepage/team.html
@@ -6,8 +6,7 @@
       {{ partial "components/section-title"
       (dict 
       "title" (i18n "homeTeamTitle")
-      "anchor" "team"
-      "fontSize" "text-4xl" ) }}
+      "anchor" "team" ) }}
       <div class="rounded bg-black-900 dark:bg-white h-2 w-16 mt-3"></div>
     </div>
     <div class="text-lg text-normal text-center mb-3 underline-links">
