--- a/themes/custom-blist/layouts/partials/homepage/events.html
+++ b/themes/custom-blist/layouts/partials/homepage/events.html
@@ -1,12 +1,11 @@
 <section id="events">
-  <div
-    class="px-6 py-12 mx-auto flex flex-col gap-8 items-center justify-center"
-  >
-    <div class="flex flex-col items-center">
-      <div class="text-4xl font-extrabold mb-3 text-center">
-        {{ i18n "homeEventsTitle" }}
-      </div>
-      <div class="rounded bg-black-900 dark:bg-white h-2 w-16"></div>
+  <div class="py-12 flex flex-col items-center justify-center">
+    <div class="flex flex-col items-center mb-10">
+      {{ partial "components/section-title"
+      (dict
+      "title" (i18n "homeEventsTitle")
+      "anchor" "events" ) }}
+      <div class="rounded bg-black-900 dark:bg-white h-2 w-16 mt-3"></div>
     </div>
     <div class="text-lg text-normal text-center mb-3 max-w-4xl">
       {{ i18n "homeEventsDescription" }}
