--- a/themes/custom-blist/layouts/partials/homepage/social.html
+++ b/themes/custom-blist/layouts/partials/homepage/social.html
@@ -5,20 +5,22 @@
       px-6
       py-12
       mx-auto
-      max-w-4xl
+      max-w-5xl
       flex flex-row flex-wrap
       gap-8
       items-center
       justify-center
     "
   >
-    <div class="max-w-xs text-center lg:text-left">
-      <div class="text-4xl font-extrabold mb-2">
-        {{ i18n "homeSocialTitle" }}
+    <div class="max-w-md flex flex-col">
+      <div class="flex flex-col items-center mb-10">
+        {{ partial "components/section-title"
+        (dict
+        "title" (i18n "homeSocialTitle")
+        "anchor" "socials" ) }}
+        <div class="rounded bg-black-900 dark:bg-white h-2 w-16 mt-3"></div>
       </div>
-      <p class="text-lg text-normal opacity-60">
-        {{ i18n "homeSocialDescription" }}
-      </p>
+      <p class="opacity-60 text-center">{{ i18n "homeSocialDescription" }}</p>
     </div>
 
     <div class="max-w-md flex flex-row flex-wrap gap-3 justify-center">
