--- a/themes/custom-blist/layouts/_default/single.html
+++ b/themes/custom-blist/layouts/_default/single.html
@@ -28,76 +28,84 @@
 
 <article class="prose max-w-4xl lg:prose-lg mx-auto my-8 dark:prose-dark px-4">
   <h1 class="text-2xl font-bold mb-2">{{ .Title }}</h1>
-  <h5 class="text-sm flex items-center">
-    <svg
-      xmlns="http://www.w3.org/2000/svg"
-      class="mr-1"
-      width="16"
-      height="16"
-      viewBox="0 0 24 24"
-      stroke-width="2"
-      stroke="currentColor"
-      fill="none"
-      stroke-linecap="round"
-      stroke-linejoin="round"
-    >
-      <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-      <circle cx="12" cy="7" r="4"></circle>
-      <path d="M6 21v-2a4 4 0 0 1 4 -4h4a4 4 0 0 1 4 4v2"></path>
-    </svg>
-    {{ $.Param "author" }} &nbsp;&bull;&nbsp;
-    <svg
-      xmlns="http://www.w3.org/2000/svg"
-      class="mr-1"
-      width="16"
-      height="16"
-      viewBox="0 0 24 24"
-      stroke-width="1.5"
-      stroke="currentColor"
-      fill="none"
-      stroke-linecap="round"
-      stroke-linejoin="round"
-    >
-      <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-      <rect x="4" y="5" width="16" height="16" rx="2" />
-      <line x1="16" y1="3" x2="16" y2="7" />
-      <line x1="8" y1="3" x2="8" y2="7" />
-      <line x1="4" y1="11" x2="20" y2="11" />
-      <rect x="8" y="15" width="2" height="2" />
-    </svg>
-    {{ $datestr | i18n "postedOnDate" }} {{ if ne $datestr $lastmodstr }}
-    &nbsp{{ $lastmodstr | i18n "lastModified" }}
-  </h5>
-  <h5 class="text-sm flex items-center justify-between">
-    {{ else }} &nbsp;&bull;&nbsp; {{ end }}
-    <div class="flex justify-between w-full">
-      <div class="flex items-center">
+  <h5 class="text-sm flex sm:items-center flex-col sm:flex-row">
+      <div class="flex">
         <svg
-      xmlns="http://www.w3.org/2000/svg"
-      class="mr-1"
-      width="16"
-      height="16"
-      viewBox="0 0 24 24"
-      stroke-width="1.5"
-      stroke="currentColor"
-      fill="none"
-      stroke-linecap="round"
-      stroke-linejoin="round"
-    >
-      <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-      <circle cx="12" cy="12" r="9" />
-      <polyline points="12 7 12 12 15 15" />
-    </svg>
-    {{ i18n "readingTime"}}{{ .ReadingTime }}&nbsp;{{ i18n "readTime" }} &nbsp;
-    {{ if .IsTranslated -}} {{- $sortedTranslations := sort .Translations
-    "Site.Language.Weight" -}} {{- $links := apply $sortedTranslations "partial"
-    "translation_link.html" "." -}} {{- $cleanLinks := apply $links "chomp" "."
-    -}} {{- $linksOutput := delimit $cleanLinks (i18n "translationsSeparator")
-    -}} &nbsp;&bull;&nbsp;{{ i18n "translationsLabel" }}&nbsp;{{ $linksOutput }}
-    {{- end }}
+        xmlns="http://www.w3.org/2000/svg"
+        class="mr-1"
+        width="16"
+        height="16"
+        viewBox="0 0 24 24"
+        stroke-width="2"
+        stroke="currentColor"
+        fill="none"
+        stroke-linecap="round"
+        stroke-linejoin="round"
+        >
+        <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+        <circle cx="12" cy="7" r="4"></circle>
+        <path d="M6 21v-2a4 4 0 0 1 4 -4h4a4 4 0 0 1 4 4v2"></path>
+      </svg>
+      {{ $.Param "author" }} <span class="mx-1 hidden sm:flex">&bull;</span>
+    </div>
+    <div class="flex flex-col sm:flex-row sm:flex-1">
+      <div class="flex items-center mt-1 sm:mt-0">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          class="mr-1"
+          width="16"
+          height="16"
+          viewBox="0 0 24 24"
+          stroke-width="1.5"
+          stroke="currentColor"
+          fill="none"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          >
+          <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+          <rect x="4" y="5" width="16" height="16" rx="2" />
+          <line x1="16" y1="3" x2="16" y2="7" />
+          <line x1="8" y1="3" x2="8" y2="7" />
+          <line x1="4" y1="11" x2="20" y2="11" />
+          <rect x="8" y="15" width="2" height="2" />
+        </svg>
+        {{ $datestr | i18n "postedOnDate" }} {{ if ne $datestr $lastmodstr }}
+        &nbsp{{ $lastmodstr | i18n "lastModified" }}
       </div>
-      <div class="flex items-center">
-        {{ partial "components/social-buttons" (dict "title" .Title "url" .Permalink "siteurl" .Site.BaseURL )}}
+  </h5>
+  <h5 class="text-sm flex items-center justify-between mt-1 sm:mt-0">
+    {{ else }} <span class="mx-1 hidden sm:flex">&bull;</span> {{ end }}
+  </div>
+    <div class="flex sm:flex-1">
+      <div class="flex justify-between w-full">
+        <div class="flex items-center">
+          <svg
+        xmlns="http://www.w3.org/2000/svg"
+        class="mr-1"
+        width="16"
+        height="16"
+        viewBox="0 0 24 24"
+        stroke-width="1.5"
+        stroke="currentColor"
+        fill="none"
+        stroke-linecap="round"
+        stroke-linejoin="round"
+      >
+        <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+        <circle cx="12" cy="12" r="9" />
+        <polyline points="12 7 12 12 15 15" />
+      </svg>
+      {{ i18n "readingTime"}}{{ .ReadingTime }}&nbsp;{{ i18n "readTime" }} &nbsp;
+      {{ if .IsTranslated -}} {{- $sortedTranslations := sort .Translations
+      "Site.Language.Weight" -}} {{- $links := apply $sortedTranslations "partial"
+      "translation_link.html" "." -}} {{- $cleanLinks := apply $links "chomp" "."
+      -}} {{- $linksOutput := delimit $cleanLinks (i18n "translationsSeparator")
+      -}} &nbsp;&bull;&nbsp;{{ i18n "translationsLabel" }}&nbsp;{{ $linksOutput }}
+      {{- end }}
+        </div>
+        <div class="flex items-center">
+          {{ partial "components/social-buttons" (dict "title" .Title "url" .Permalink "siteurl" .Site.BaseURL )}}
+        </div>
       </div>
     </div>
   </h5>
