fix: events layout responsivness
and improve home section title consistency

--- a/themes/custom-blist/layouts/partials/components/section-title.html
+++ b/themes/custom-blist/layouts/partials/components/section-title.html
@@ -1,31 +1,35 @@
 <div class="grid grid-cols-12 section-title group">
-    <div class="col-span-2 flex flex-row items-center justify-end">
-        <a class="
-        opacity-0
-        group-hover:opacity-100
-        section-link-icon
-        font-normal
-        text-xl
-        mr-2 
-        p-2
-        rounded-full
-        border border-transparent
-        text-gray-500
-        hover:text-gray-800 hover:border-gray-800
-        cursor-pointer
-        transition-colors
-        dark:text-white dark:hover:border-gray-300 dark:hover:text-gray-300" href="#{{ .anchor }}">
-            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-link" width="24" height="24"
-                viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round"
-                stroke-linejoin="round">
-                <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-                <path d="M10 14a3.5 3.5 0 0 0 5 0l4 -4a3.5 3.5 0 0 0 -5 -5l-.5 .5"></path>
-                <path d="M14 10a3.5 3.5 0 0 0 -5 0l-4 4a3.5 3.5 0 0 0 5 5l.5 -.5"></path>
-            </svg>
-        </a>
-    </div>
+  <div class="col-span-2 flex flex-row items-center justify-end">
+    <a
+      class="opacity-0 group-hover:opacity-100 section-link-icon font-normal text-xl mr-2 p-2 rounded-full border border-transparent text-gray-500 hover:text-gray-800 hover:border-gray-800 cursor-pointer transition-colors dark:text-white dark:hover:border-gray-300 dark:hover:text-gray-300"
+      href="#{{ .anchor }}"
+    >
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        class="icon icon-tabler icon-tabler-link"
+        width="24"
+        height="24"
+        viewBox="0 0 24 24"
+        stroke-width="2"
+        stroke="currentColor"
+        fill="none"
+        stroke-linecap="round"
+        stroke-linejoin="round"
+      >
+        <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+        <path
+          d="M10 14a3.5 3.5 0 0 0 5 0l4 -4a3.5 3.5 0 0 0 -5 -5l-.5 .5"
+        ></path>
+        <path
+          d="M14 10a3.5 3.5 0 0 0 -5 0l-4 4a3.5 3.5 0 0 0 5 5l.5 -.5"
+        ></path>
+      </svg>
+    </a>
+  </div>
 
-    <div class="col-span-8 font-extrabold flex items-center justify-center text-4xl">
-        {{ .title }}
-    </div>
+  <div
+    class="col-span-8 font-extrabold flex items-center justify-center text-4xl text-center"
+  >
+    {{ .title }}
+  </div>
 </div>
