--- a/themes/custom-blist/layouts/partials/homepage/events.html
+++ b/themes/custom-blist/layouts/partials/homepage/events.html
@@ -1,13 +1,11 @@
 <section id="events">
-  <div class="py-12 flex flex-col items-center justify-center">
-    <div class="flex flex-col items-center mb-10">
-      {{ partial "components/section-title"
-      (dict
-      "title" (i18n "homeEventsTitle")
-      "anchor" "events" ) }}
+  <div class="py-12 flex flex-col items-center justify-center gap-8">
+    <div class="flex flex-col items-center">
+      {{ partial "components/section-title" (dict "title" (i18n
+      "homeEventsTitle") "anchor" "events" ) }}
       <div class="rounded bg-black-900 dark:bg-white h-2 w-16 mt-3"></div>
     </div>
-    <div class="text-lg text-normal text-center mb-3 max-w-4xl">
+    <div class="text-lg text-normal text-center px-3 max-w-4xl">
       {{ i18n "homeEventsDescription" }}
     </div>
     <div
